[package]
name = "flop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13.3", features = [
    "axum",
    "scalar",
    "axum-multipart",
    "axum-headers",
] }
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
rand = "0.8.5"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "tracing"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
axum-test = "15.7.1"
serde_json = "1.0.128"
